@@ -50,15 +50,12 @@ java {
 
     // Workaround needed for Eclipse, probably because of https://github.com/gradle/gradle/issues/16922
     // Should be removed as soon as Gradle 7.0.1 is released ( https://github.com/gradle/gradle/issues/16922#issuecomment-828217060 )
-    modularity.inferModulePath.set(false)
+    modularity.inferModulePath = true
 
     toolchain {
-        // If this is updated, also update
-        // - build.gradle -> jacoco -> toolVersion (because JaCoCo does not support newest JDK out of the box. Check versions at https://www.jacoco.org/jacoco/trunk/doc/changes.html)
-        // - .devcontainer/devcontainer.json#L34 and
-        // - .gitpod.Dockerfile
-        // - .moderne/moderne.yml
-        // - .github/workflows/deployment*.yml
+        // Keep in sync with
+        // - sourceCompatibility and targetCompatibility
+        // - .github/workflows/deployment.yml
         // - .github/workflows/tests*.yml
         // - .github/workflows/update-gradle-wrapper.yml
         // - docs/getting-into-the-code/guidelines-for-setting-up-a-local-workspace/intellij-12-build.md
@@ -512,6 +509,7 @@ tasks.withType(JavaCompile).configureEach {
 
     // hint by https://docs.gradle.org/current/userguide/performance.html#run_the_compiler_as_a_separate_process
     options.fork = true
+    options.compilerArgs += '--enable-preview'
 }
 
 compileJava {
@@ -586,6 +584,7 @@ run {
             main = 'org.jabref.http.server.Server'
         }
     }
+    jvmArgs += '--enable-preview'
 }
 
 javadoc {
@@ -617,6 +616,7 @@ test {
         // TODO: Remove this as soon as ArchUnit is modularized
         runOnClasspath = true
     }
+    jvmArgs += '--enable-preview'
 }
 
 testlogger {
@@ -638,6 +638,11 @@ tasks.withType(Test).configureEach {
     if (!providers.environmentVariable("CI").isPresent()) {
         maxParallelForks = Math.max(Runtime.runtime.availableProcessors() - 1, 1)
     }
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
 }
 
 tasks.register('databaseTest', Test) {
